Problemas con el get de segun que clase, a tomar por culo